# RadeonImageFilter

./: License.md  License.txt  README.md  RELEASENOTES.md  RELEASENOTES1.6.0.md  RELEASENOTES1.6.1.md  RELEASENOTES1.6.2.md  RELEASENOTES1.7.0.md  RELEASENOTES1.7.1.md  RELEASENOTES1.7.2.md  RELEASENOTES1.7.3.md
CentOS7/: libRadeonImageFilters.so.1  libRadeonImageFilters.so.1.5.1  libRadeonImageFilters.so.1.5.2  libRadeonImageFilters.so.1.5.3  libRadeonImageFilters.so.1.5.4  libRadeonImageFilters.so.1.6.0  libRadeonImageFilters64.so.1.5.0  libRadeonML-MIOpen.so.1.5.4
CentOS7/Dynamic/: libMIOpen.so.2  libRadeonImageFilters.so.1  libRadeonImageFilters.so.1.6.1  libRadeonImageFilters.so.1.6.2  libRadeonImageFilters.so.1.7.0  libRadeonImageFilters.so.1.7.1  libRadeonML.so.0  libRadeonML.so.0.9.10  libRadeonML_MIOpen.so.0
MacOS_ARM/Dynamic/: libRadeonImageFilters.1.7.3.dylib  libRadeonImageFilters.1.dylib  libRadeonImageFilters.dylib  libRadeonML.0.9.12.dylib  libRadeonML.0.dylib
OSX/: libOpenImageDenoise.0.dylib  libOpenImageDenoise.dylib  libRadeonImageFilters.1.5.1.dylib  libRadeonImageFilters.1.5.2.dylib  libRadeonImageFilters.1.5.3.dylib  libRadeonImageFilters.1.5.4.dylib  libRadeonImageFilters.1.6.0.dylib  libRadeonImageFilters.1.dylib  libRadeonImageFilters.dylib  libRadeonImageFilters64.1.5.0.dylib  libRadeonImageFilters64.1.dylib  libRadeonImageFilters64.dylib  libRadeonML-MPS.0.dylib
OSX/Dynamic/: libRadeonImageFilters.1.6.1.dylib  libRadeonImageFilters.1.6.2.dylib  libRadeonImageFilters.1.7.0.dylib  libRadeonImageFilters.1.7.1.dylib  libRadeonImageFilters.1.7.3.dylib  libRadeonImageFilters.1.dylib  libRadeonML.0.9.10.dylib  libRadeonML.0.9.11.dylib  libRadeonML.0.dylib  libRadeonML_MPS.0.dylib
Ubuntu18/: libOpenImageDenoise.so.0  libRadeonImageFilters.so.1  libRadeonImageFilters.so.1.5.1  libRadeonImageFilters.so.1.5.2  libRadeonImageFilters.so.1.5.3  libRadeonImageFilters.so.1.5.4  libRadeonImageFilters.so.1.6.0  libRadeonImageFilters64.so.1  libRadeonImageFilters64.so.1.5.0  libRadeonML-MIOpen.so.1  libRadeonML-MIOpen.so.1.5.4  libRadeonML_MIOpen.so.0
Ubuntu18-Clang/Dynamic/: libMIOpen.so.2  libRadeonImageFilters.so.1  libRadeonImageFilters.so.1.7.1  libRadeonML.so.0
Ubuntu18/Dynamic/: libRadeonImageFilters.so.1  libRadeonImageFilters.so.1.6.1  libRadeonImageFilters.so.1.6.2  libRadeonImageFilters.so.1.7.0  libRadeonML.so.0.9.10
Ubuntu20/Dynamic/: libRadeonImageFilters.so.1  libRadeonImageFilters.so.1.7.1  libRadeonML_MIOpen.so.0
Windows/: RadeonImageFilters.lib  RadeonImageFilters64.lib
Windows/Dynamic/: RadeonImageFilters.lib  RadeonML.lib  amd_taau_ops.rml_plugin.lib
Windows/Dynamic-MT/: RadeonImageFilters.lib
include/: CMakeLists.txt  RadeonImageFilters.h  RadeonImageFilters_cl.h  RadeonImageFilters_directx12.h  RadeonImageFilters_gl.h  RadeonImageFilters_metal.h  RadeonImageFilters_version.h  version.h
models/: denoise_c3_hdr_gamma_2.5_f16.onnx  denoise_c3_ldr_float16.onnx  taa_upscale_2x_part.pb  taau_low_res.pb  upscale2x_c3_rt_f16.onnx
models/kernels/: gfx902_8.cd.updb.txt  gfx906_60.cd.updb.txt
samples/: AIDenoiser.vcxproj  AppSettings.h  Bloom.vcxproj  CMakeLists.txt  Denoisers.vcxproj  EdgeDetection.vcxproj  GaussianBlur.vcxproj  MLAA.vcxproj  MedianDenoise.vcxproj  OpenImageDenoiser.vcxproj  PhotoToneMapping.vcxproj  Samples.sln  ToneMapping.vcxproj  UserDefined.vcxproj  premake5.lua
samples/AIDenoiser/: AIDenoiser.lua  CMakeLists.txt  main.cpp
samples/Bloom/: Bloom.lua  CMakeLists.txt  main.cpp
samples/Denoisers/: CMakeLists.txt  Denoisers.lua  main.cpp
samples/EdgeDetection/: CMakeLists.txt  EdgeDetection.lua  main.cpp
samples/GaussianBlur/: CMakeLists.txt  GaussianBlur.lua  main.cpp
samples/ImageTools/: ImageTools.h  stb_image_write.h
samples/MLAA/: CMakeLists.txt  MLAA.lua  main.cpp
samples/MedianDenoise/: CMakeLists.txt  MedianDenoise.lua  main.cpp
samples/OpenImageDenoiser/: CMakeLists.txt  OpenImageDenoiser.lua  main.cpp
samples/PhotoToneMapping/: CMakeLists.txt  PhotoToneMapping.lua  main.cpp
samples/ToneMapping/: CMakeLists.txt  ToneMapping.cpp  ToneMapping.lua  main.cpp
samples/UserDefined/: CMakeLists.txt  UserDefined.lua  main.cpp
samples/Utils/: cmd_parser.cpp  cmd_parser.h
samples/images/: target.exr  view_shading_depth.exr
